name:                postcode
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Maxwell Swadling
maintainer:          maxwellswadling@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Postcode
  build-depends:       base >=4.6 && <4.7, digit == 0.1.0
  default-language:    Haskell2010